--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Logs
+
+gs
 logs
 *.log
 
@@ -23,3 +24,17 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
+
+# Webstorm
+.idea
+
+# Vagrant
+.vagrant
+
+# Vim
+*.swp
+
+# Packer
+packer_cache
+*.iso
+*.box
