--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "devDependencies": {
     "mocha": "*",
     "should": "*"
+  },
+  "engineStrict": true,
+  "engines": {
+    "node" : ">=0.11.3"
   }
 }
