--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-usergrid",
-  "version": "0.0.1-beta",
+  "version": "0.0.2",
   "description": "wrapper to the usergrid library",
   "main": "index.js",
   "scripts": {
